2066 [x264] replaced --fullrange with --range (requires x264 revision 2119+)
2065 [Adaptive Muxer] fixed handling of delay value and default/forced track. Bug #3443721
2064 [MainForm] MeGUI can only be closed if there are no running jobs
2063 [D2V Indexer] .bad and .fix.txt files will also be deleted in cleanup step
2062 [VobSubber] cosmetics
2061 [x264] fixed wrong --sar values when using BluRay Target Device with 720x576
2060 [AVS Script Creator] enhanced selection box if opening an indexable file directly
2059 [OneClick] + [Update] log categories will not be created anymore if already available
2058 [MKV Muxer] improved idx subtitle handling
2057 [Adaptive Muxer] fixed long delay when adding more than 4 tracks. Bug #3404061
2056 [VideoPlayer] fixed handling of non default DPI values
2055 [AVS Script Creator] fixed opening the wrong video preview in some rare circumstances
2054 [pre-rendering job] fixed file size targeting with AutoEncode and OneClick
2053 [Settings] added option to append a text to forced track names
2052 [Lame] fixed applying bitrate in ABR mode
2051 [progress window] changed number formatting

Changelog 2028 --> 2050

Main changes:
[x264]     blu-ray device: added 1440x1080 as supported resolution
[OneClick] added option to mux the audio source file only if the codec is the same as requested
           
Other changes:
[Audio Encoder] added 24 <--> 25 conversions 
[AviSynth] open script handling improved
[Chapter Creator] fixed language tag creation
[FFMSIndexer] added option to select the number of decoding threads. default and recommended value is 1
              changed LoadCPlugin to LoadPlugin for the x64 plugin (requires ffms r507+)
[Flac] enhanced output handling if file already exists
[Lame] fixed always applying bitrate 128 in ABR mode
[MainForm] fixed spelling. Bug #3390630
[Mediainfo] mediainfo details are written into the log for most files/jobs
[OneClick] enhanced error handling
[OneClick] fixed editing of mkv mux jobs